generating signed apk

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -19,3 +19,8 @@
 
 android.useAndroidX=true
 android.enableJetifier=true
+
+MYAPP_UPLOAD_STORE_FILE=challenge-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=challenge-key
+MYAPP_UPLOAD_STORE_PASSWORD=teste123
+MYAPP_UPLOAD_KEY_PASSWORD=teste123
